<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/channel_detail_header"
        layout="@layout/channel_detail_header"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nested_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:fitsSystemWindows="true"
        android:clipToPadding="false"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/channel_logo"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_catch_up" />

            <android.support.constraint.Guideline
                android:id="@+id/left_guide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin" />

            <android.support.constraint.Guideline
                android:id="@+id/right_guide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/activity_horizontal_margin" />

            <TextView
                android:id="@+id/channel_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="@dimen/channel_title_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/show_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/channel_logo"
                app:layout_constraintTop_toTopOf="@+id/channel_logo"
                tools:text="Comedy Central" />

            <TextView
                android:id="@+id/show_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Downtown Abey"
                android:textSize="@dimen/show_title_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/show_year"
                app:layout_constraintEnd_toEndOf="@+id/channel_title"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/channel_title"
                app:layout_constraintTop_toBottomOf="@+id/channel_title" />

            <TextView
                android:id="@+id/show_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_title_size"
                app:layout_constraintBottom_toBottomOf="@+id/channel_logo"
                app:layout_constraintStart_toStartOf="@+id/show_title"
                app:layout_constraintTop_toBottomOf="@+id/show_title"
                tools:text="2013" />

            <TextView
                android:id="@+id/show_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_title_size"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                tools:text="Romance"
                app:layout_constraintBottom_toBottomOf="@+id/show_year"
                app:layout_constraintStart_toEndOf="@+id/show_year"
                app:layout_constraintTop_toTopOf="@+id/show_year" />

            <TextView
                android:id="@+id/show_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_title_size"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/right_guide"
                app:layout_constraintStart_toStartOf="@+id/left_guide"
                app:layout_constraintTop_toBottomOf="@+id/show_genres"
                tools:text="Vikings is inspired by the sagas of Viking Ragnar Lothbrok, one of the best-known ...." />

            <TextView
                android:id="@+id/show_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_title_size"
                android:layout_marginTop="16dp"
                tools:text="Cast:..."
                android:textColor="@color/light_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guide"
                app:layout_constraintTop_toBottomOf="@+id/show_description" />

            <TextView
                android:id="@+id/show_creators"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="56dp"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/normal_title_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guide"
                app:layout_constraintTop_toBottomOf="@+id/show_cast"
                tools:text="Creators:..." />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/channel_detail_progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

</android.support.design.widget.CoordinatorLayout>
